--- a/frontend/src/Style/AuthenticationStyle/RegistrationLandingPageStyle.css
+++ b/frontend/src/Style/AuthenticationStyle/RegistrationLandingPageStyle.css
@@ -1,27 +1,54 @@
+/* RegistrationLandingPageStyle.css */
+
 .registration-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 100vh;
 }
 
-.registration-title-and-image,
-.registration-information-textfields {
+.registration-title-and-image-container,
+.registration-information-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; /* Center horizontally and vertically */
+  align-items: center;
   width: 50%;
-  padding: 1.2rem; /* Adjust the padding as needed */
+  padding: 3rem;
+  height: 100%;
 }
 
-.registration-title-and-image h1 {
+.registration-title-and-image-container h1 {
   text-align: left;
+  color: #122797;
+  margin-bottom: 0; /* Remove default margin */
 }
 
-.registration-title-and-image img {
-  width: 350px;
+.registration-title-and-image-container img {
+  width: 400px;
 }
 
-.registration-information-textfields {
+/* Center the "Sign Up Now!" text vertically within the registration-title-and-image-container */
+.registration-title-and-image-container {
+  align-items: flex-start;
+}
+
+.registration-information-container {
   background: #122797;
+}
+
+.registration-information-content {
+  border-radius: 30px;
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  width: 70%; /* Adjust the width as needed */
+  padding: 4rem; /* Add padding to the container */
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.registration-information-content h2 {
+  color: #fff;
+  text-align: center;
 }
