--- a/frontend/src/Style/root.css
+++ b/frontend/src/Style/root.css
@@ -1,70 +1,87 @@
 /* styles.css */
 
 :root {
-    /* Color Palette */
-    --body-background-gradient: linear-gradient(to bottom right, #f0f0f0, #e0e0e0);
-    --text-primary: #333;
-    --text-secondary: #666;
-    --heading-primary:  #122797;
-    --heading-secondary: #0f9d58;
-    --label-color: #999;
-    --background-light: #fff;
-    --background-dark: #f5f5f5;
-    --border-color: #ddd;
-    --link-color: #1a73e8;
-  }
-  
-  html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    background: var(--body-background-gradient);
-    color: var(--text-primary);
-    font-family: 'Arial', sans-serif;
-  }
-  
-  p {
-    color: var(--text-primary);
-    line-height: 1.6;
-  }
-  
-  label {
-    color: var(--label-color);
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    color: var(--heading-primary);
-  }
-  
-  h1 {
-    font-size: 64px;
-  }
+  /* Color Palette */
+  --body-background-gradient: linear-gradient(
+    to bottom right,
+    #f0f0f0,
+    #e0e0e0
+  );
+  --text-primary: #333;
+  --text-secondary: #666;
+  --heading-primary: #122797;
+  --heading-secondary: #0f9d58;
+  --label-color: #999;
+  --background-light: #fff;
+  --background-dark: #f5f5f5;
+  --border-color: #ddd;
+  --link-color: #1a73e8;
+  --input-background: #6aa6ff;
+}
 
-  h2 {
-    color: var(--heading-secondary);
-  }
-  
-  a {
-    color: var(--link-color);
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
-  
-  .bg-light {
-    background-color: var(--background-light);
-  }
-  
-  .bg-dark {
-    background-color: var(--background-dark);
-  }
-  
-  .border {
-    border: 1px solid var(--border-color);
-  }
-  
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: var(--body-background-gradient);
+  color: var(--text-primary);
+  font-family: "Inria Serif";
+}
+
+p {
+  color: var(--text-primary);
+  line-height: 1.6;
+}
+
+label {
+  color: var(--label-color);
+}
+
+h1 {
+  font-size: 64px;
+}
+
+h2 {
+  font-size: 36px;
+}
+
+a {
+  color: var(--link-color);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.bg-light {
+  background-color: var(--background-light);
+}
+
+.bg-dark {
+  background-color: var(--background-dark);
+}
+
+.border {
+  border: 1px solid var(--border-color);
+}
+
+input {
+  background: var(--input-background);
+  border: none;
+  padding: 8px; /* Add padding for better visibility */
+  border: none; /* Remove default border */
+  outline: none; /* Remove outline on focus (click) */
+}
+
+button {
+  font-family: "Inria Serif";
+}
+
+input::placeholder {
+  font-family: "Inria Serif";
+}
