--- a/frontend/src/Style/AuthenticationStyle/SignUpStyle.css
+++ b/frontend/src/Style/AuthenticationStyle/SignUpStyle.css
@@ -1,45 +1,40 @@
-/* Style for the container holding the label and dropdown */
 .registration-user-type {
   display: flex;
-  align-items: center; /* Aligns items vertically center */
+  align-items: center; 
   margin-top: 20px;
-  margin-bottom: 40px; /* Adds space below the dropdown */
+  margin-bottom: 40px; 
 
 }
 
-/* Style for the label */
+
 .registration-user-type label {
-  color: white; /* Text color */
-  margin-right: 10px; /* Space between label and dropdown */
+  color: white; 
+  margin-right: 10px; 
 }
 
-/* Style for the dropdown select element */
+
 .registration-user-type select {
-  background: #6aa6ff; /* Same background as input fields */
-  color: white; /* Text color */
-  border: none; /* No border */
-  border-radius: 10px; /* Same border-radius as inputs */
-  padding: 8px; /* Padding like inputs */
-  box-shadow: 3px 4px 1px 1px rgba(0, 0, 0, 0.25); /* Same box shadow as inputs */
-  -webkit-appearance: none; /* Removes default styling on WebKit browsers */
-  -moz-appearance: none; /* Removes default styling on Mozilla browsers */
-  appearance: none; /* Removes default styling */
-  flex-grow: 1; /* Makes the select element take the available space */
+  background: #6aa6ff; 
+  color: white; 
+  border: none; 
+  border-radius: 10px; 
+  padding: 8px; 
+  box-shadow: 3px 4px 1px 1px rgba(0, 0, 0, 0.25); 
+  -webkit-appearance: none; 
+  -moz-appearance: none; 
+  appearance: none;
+  flex-grow: 1; 
 }
 
-/* Style for the dropdown option elements */
 .registration-user-type select option {
-  background: #122797; /* Darker background for options */
-  color: white; /* Text color for options */
+  background: #122797; 
+  color: white; 
 }
 
-/* Style for the dropdown select element */
 .registration-user-type select {
-  /* existing styles */
-  outline: none; /* Removes the default focus outline */
+  outline: none; 
 }
 
-/* It's recommended to add a custom focus style for accessibility */
 .registration-user-type select:focus {
-  box-shadow: 0 0 0 2px #6aa6ff; /* Example focus style */
+  box-shadow: 0 0 0 2px #6aa6ff; 
 }
