--- a/frontend/src/Style/UserProfileStyle/UserProfilePageStyle.css
+++ b/frontend/src/Style/UserProfileStyle/UserProfilePageStyle.css
@@ -1,37 +1,47 @@
-.user-profile-container  {
+.user-profile-container {
     display: flex;
     justify-content: center;
-    align-items: stretch; 
-    background: linear-gradient( #122797, #8da9e7);
-    height: 100vh; 
+    align-items: stretch;
+    background: linear-gradient(#122797, #8da9e7);
+    height: 100vh;
 }
 
-.myprofile-container, .properties-and-requests-container {
+.myprofile-container,
+.properties-and-requests-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     width: 50%;
-    padding: 2rem; 
+    padding: 2rem;
     height: 100%;
 }
 
 .myprofile-content,
-.properties-content,
+.properties-content {
+    border-radius: 30px;
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    width: 100%;
+    padding: 2rem;
+    margin: 1rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .requests-content {
     border-radius: 30px;
     background: rgba(255, 255, 255, 0.1);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    width: 100%; 
-    padding: 2rem; 
-    margin: 1rem 0; 
+    width: 100%;
+    padding: 2rem;
+    margin: 1rem 0;
     display: flex;
-    justify-content: center;
-    align-items: center; 
 }
 
 .requests-content {
-    margin-top: 2%; 
+    margin-top: 2%;
 }
 
 .properties-content {
