--- a/frontend/src/Style/AuthenticationStyle/LoginAndRegistrationStyle.css
+++ b/frontend/src/Style/AuthenticationStyle/LoginAndRegistrationStyle.css
@@ -1,40 +1,57 @@
+.registration-and-login-content-main-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .input-with-icon {
   display: flex;
   align-items: center;
-  margin-top: 20px;
-  background: #6aa6ff; 
-  padding: 8px; 
+  background: var(--color4);
+  padding: 8px;
   border-radius: 10px;
   box-shadow: 3px 4px 1px 1px rgba(0, 0, 0, 0.25);
 }
 
 .input-with-icon img {
   margin-right: 10px;
-  height: 20px; 
+  height: 20px;
 }
 
-.input-with-icon input,
+.input-with-icon input {
+  flex: 1; 
+  height: 100%; 
+  border: none; 
+  background: transparent; 
+  color: white;
+  outline: none; 
+}
+
 .input-with-icon input::placeholder {
   color: white;
 }
 
 .error-msg {
-  color: white;
-  margin-top: 0;
+  color: red;
+  margin: 3px;
+}
+
+.error-msg-alternative {
+  margin-top: 3px;
+  visibility: hidden;
 }
 
 .input-border-error {
-  border: 2px solid red !important;
+  border: 2px solid red ;
 }
 
 .registration-and-login-button {
   margin-top: 20px;
   border-radius: 255px;
-  background: #fff;
+  background: var(--color4);
   width: 100%;
   border: none;
   box-shadow: 3px 4px 1px 1px rgba(0, 0, 0, 0.25);
-  color: #122797;
+  color: var(--color2);
   font-size: 15px;
   font-weight: 700;
   padding: 8px;
@@ -42,9 +59,7 @@
 }
 
 .registration-and-login-button:hover {
-  transform: scale(1.1);
-  background-color: #6aa6ff;
+  background-color: var(--color2);
   color: white;
   cursor: pointer;
 }
-
