--- a/frontend/src/Style/UserProfileStyle/UserRequestsStyle.css
+++ b/frontend/src/Style/UserProfileStyle/UserRequestsStyle.css
@@ -2,11 +2,12 @@
     font-size: 1.5em;
 }
 
+
 .request-description {
-    color: #fff;
+    color: var(--color4);
     border: 1px solid #8da9e7;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 100%;
+    width: 90%;
     margin: 1rem;
     padding: 1rem;
 }
