--- a/frontend/src/Style/UserProfileStyle/UserInformationStyle.css
+++ b/frontend/src/Style/UserProfileStyle/UserInformationStyle.css
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 20px;
   border-radius: 15px;
-  background: rgba(255, 255, 255, 0.1);
+  background-color: var(--color3);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   width: 100%;
   max-width: 400px; 
@@ -65,6 +65,7 @@
   padding: 8px;
   border-radius: 5px;
   text-align: right; 
+  color: var(--color4);
 }
 
 .user-information-button {
@@ -80,4 +81,6 @@
 .user-information-cancel-button {
   background-color: #ff4444;
 }
+
+
 
