--- a/frontend/src/Style/UserProfileStyle/UserProfilePageStyle.css
+++ b/frontend/src/Style/UserProfileStyle/UserProfilePageStyle.css
@@ -2,11 +2,11 @@
     display: flex;
     justify-content: center;
     align-items: stretch;
-    background: linear-gradient(#122797, #8da9e7);
+    background-color: var(--color1);
     height: 100vh;
 }
 
-.myprofile-container,
+.my-profile-container,
 .properties-and-requests-container {
     display: flex;
     flex-direction: column;
@@ -15,10 +15,12 @@
     width: 50%;
     padding: 2rem;
     height: 100%;
+    margin: 1rem;
 }
 
-.myprofile-content,
-.properties-content {
+.my-profile-content,
+.properties-content,
+.requests-content {
     border-radius: 30px;
     background: rgba(255, 255, 255, 0.1);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -30,20 +32,50 @@
     align-items: center;
 }
 
-.requests-content {
-    border-radius: 30px;
-    background: rgba(255, 255, 255, 0.1);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    width: 100%;
-    padding: 2rem;
-    margin: 1rem 0;
-    display: flex;
-}
 
 .requests-content {
     margin-top: 2%;
+    width: 700px;
+    height: auto;
 }
 
 .properties-content {
     margin-bottom: 2%;
+}
+
+.properties-and-requests-container {
+    margin-right: 2%;
+    width: 700px;
+}
+
+
+@media only screen and (max-width: 1200px) {
+    .user-profile-container {
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      
+    }
+
+    .my-profile-container, 
+    .properties-and-requests-container{
+        padding: 0;
+        margin: 0;
+      }
+
+    .user-profile-container {
+        height: auto;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .properties-and-requests-container,
+    .properties-content,
+    .requests-content {
+        width: 90%;
+    }
+
+    .my-profile-container {
+        width: auto;
+    }
 }
