moved validation to common file

--- a/frontend/src/Style/AuthenticationStyle/LogOutStyle.css
+++ b/frontend/src/Style/AuthenticationStyle/LogOutStyle.css
@@ -6,17 +6,18 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7); 
+  background: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .logout-modal {
-  background: var(--color1); 
+  background: var(--color1);
   padding: 20px;
   border-radius: 8px;
   text-align: center;
+  padding: 3rem;
 }
 
 .logout-modal h2 {
