added error and success message

--- a/frontend/src/Style/AuthenticationStyle/EmployeeRegistrationStyle.css
+++ b/frontend/src/Style/AuthenticationStyle/EmployeeRegistrationStyle.css
@@ -52,6 +52,10 @@
   border: 2px solid red;
 }
 
+.success-msg {
+  color: green;
+}
+
 .registration-and-login-button {
   border-radius: 8px;
   background: var(--color4);
