--- a/frontend/src/Style/UserProfileStyle/UserRequestsStyle.css
+++ b/frontend/src/Style/UserProfileStyle/UserRequestsStyle.css
@@ -1,13 +1,15 @@
-.request-header {
-    font-size: 1.5em;
+.request-content {
+  background-color: #eeedeb;
+  padding: 20px;
+  border-radius: 10px;
 }
 
-
 .request-description {
-    color: var(--color4);
-    border: 1px solid #8da9e7;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    margin: 1rem;
-    padding: 1rem;
+  color: #3c3633;
+  border: 2px solid #3c3633;
+  border-radius: 10px;
+  box-shadow: 3px 4px 1px 1px rgba(0, 0, 0, 0.25);
+  width: 90%;
+  margin: 1rem;
+  padding: 1rem;
 }
