set up page for requests

--- a/frontend/src/Style/UserProfileStyle/UserInformationStyle.css
+++ b/frontend/src/Style/UserProfileStyle/UserInformationStyle.css
@@ -78,6 +78,8 @@
   width: 100%;
   align-items: center;
   margin-bottom: 15px;
+  border: 1px solid var(--color4);
+  border-radius: 5px;
 }
 
 .user-information-label {
