--- a/frontend/src/Style/LandingPageStyle/EmployeeRequestsLandingPageStyle.css
+++ b/frontend/src/Style/LandingPageStyle/EmployeeRequestsLandingPageStyle.css
@@ -2,5 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
+}
+
+.employee-requests-key-generation,
+.employee-requests-user-list {
+  width: 50%;
 }
