--- a/frontend/src/Style/RequestsStyle/KeyGenerationStyle.css
+++ b/frontend/src/Style/RequestsStyle/KeyGenerationStyle.css
@@ -13,8 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 1.5rem;
-  margin: 2rem;
+  padding: 1rem;
 }
 
 .key-generation-content > * {
@@ -38,20 +37,21 @@
 }
 
 .key-generation-two-buttons button {
-    background-color: var(--color4);
-    color: var(--color1);
-    width: 220px;
-    height: 60px;
+  background-color: var(--color4);
+  color: var(--color1);
+  width: 220px;
+  height: 60px;
 }
 
 .key-generation-submission button {
-    width: 100%;
-    text-align: center;
-    background-color: var(--color4);
-    color: var(--color1);
-    height: 60px;
+  width: 100%;
+  text-align: center;
+  background-color: var(--color4);
+  color: var(--color1);
+  height: 60px;
 }
 
-.key-generation-submission button:hover, .key-generation-two-buttons button:hover {
-    cursor: pointer;
+.key-generation-submission button:hover,
+.key-generation-two-buttons button:hover {
+  cursor: pointer;
 }
