--- a/frontend/src/Style/RequestsStyle/KeyGenerationStyle.css
+++ b/frontend/src/Style/RequestsStyle/KeyGenerationStyle.css
@@ -4,7 +4,6 @@
   padding: 1rem;
   margin: 0 3rem;
   height: 400px;
-
 }
 
 .key-generation-header h2 {
@@ -26,11 +25,12 @@
   justify-content: space-between;
   border: 2px solid var(--color4);
   border-radius: 5px;
-  padding: 0 1rem;
+  padding: 1rem 1rem;
 }
 
 .key-generation-user-result p {
   color: var(--color4);
+  margin: 0;
 }
 
 .key-generation-two-buttons {
