--- a/frontend/src/Style/PropertyProfileStyle/PropertyInfoFormStyle.css
+++ b/frontend/src/Style/PropertyProfileStyle/PropertyInfoFormStyle.css
@@ -6,9 +6,9 @@
 }
   
 /* buttonsStyles.css */
-.editButton,
-.editModeButton,
-.cancelButton {
+.edit-button,
+.edit-mode-button,
+.cancel-button {
   padding: 10px;
   cursor: pointer;
   border: none;
@@ -18,18 +18,18 @@
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.35);
 }
 
-.editButton {
+.edit-button {
   background: var(--color3);
   border: 1px solid var(--color3);
   width: 65px;
 }
 
-.editModeButton {
+.edit-mode-button {
   background: var(--color3);
   border: 1px solid var(--color3);
 }
 
-.cancelButton {
+.cancel-button {
   background: var(--cancel);
   border-color: var(--cancel);
   margin-left: 10px;
