--- a/frontend/src/Style/PropertyProfileStyle/PropertyInfoFormStyle.css
+++ b/frontend/src/Style/PropertyProfileStyle/PropertyInfoFormStyle.css
@@ -4,11 +4,12 @@
   margin-bottom: 15px;
   margin-top: -10px;
 }
-  
+
 /* buttonsStyles.css */
 .edit-button,
 .edit-mode-button,
-.cancel-button {
+.cancel-button,
+.view-condo-files-button {
   padding: 10px;
   cursor: pointer;
   border: none;
@@ -16,6 +17,7 @@
   color: var(--color1);
   align-self: center;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.35);
+  margin: 0 0.2rem;
 }
 
 .edit-button {
@@ -23,7 +25,10 @@
   border: 1px solid var(--color3);
   width: 65px;
 }
-
+.view-condo-files-button {
+  background: var(--color3);
+  border: 1px solid var(--color3);
+}
 .edit-mode-button {
   background: var(--color3);
   border: 1px solid var(--color3);
