--- a/frontend/src/Style/CondoProfileStyle/CondoInfoFormStyle.css
+++ b/frontend/src/Style/CondoProfileStyle/CondoInfoFormStyle.css
@@ -32,18 +32,19 @@
 .editButton {
   background: var(--color3);
   border: 1px solid var(--color3);
-  width: 65px;
+  margin: 0 0.4rem;
 }
 
 .editModeButton {
   background: var(--color3);
   border: 1px solid var(--color3);
+  margin: 0 0.4rem;
 }
 
 .cancelButton {
   background: var(--cancel);
   border-color: var(--cancel);
-  margin-left: 10px;
+  margin: 0 0.4rem;
 }
 
 .buttons-container {
