added visualisation to show the type of user selected

--- a/frontend/src/Style/RequestsStyle/KeyGenerationStyle.css
+++ b/frontend/src/Style/RequestsStyle/KeyGenerationStyle.css
@@ -57,3 +57,7 @@
 .key-generation-two-buttons button:hover {
   cursor: pointer;
 }
+
+.key-generation-two-buttons .selected {
+  background-color: var(--color3);
+}
