--- a/frontend/src/Style/RequestsStyle/OwnerRequestModalStyle.css
+++ b/frontend/src/Style/RequestsStyle/OwnerRequestModalStyle.css
@@ -1,48 +1,25 @@
-/* LogoutConfirmationModal.css */
-
-.logout-modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.7);
+.owner-request-modal-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-.logout-modal {
-  background: var(--color1);
-  padding: 20px;
-  border-radius: 8px;
+.owner-request-modal-title {
+  border-bottom: 1px solid var(--color4);
   text-align: center;
-  padding: 3rem;
+  margin: 0px 16px !important;
 }
 
-.logout-modal h2 {
-  color: var(--color3); /* Header text color */
+.owner-request-modal-btn {
+  color: var(--color1);
+  background-color: var(--color3);
+  outline: none;
+  border: 0;
+  border-radius: 5px;
+  padding: 0.4rem;
+  position: relative;
 }
 
-.logout-modal p {
-  color: var(--color3); /* Body text color */
-}
-
-.logout-modal-buttons {
-  margin-top: 20px;
-}
-
-.logout-modal-buttons button {
-  background: var(--color4); /* Button background color */
-  color: var(--color1); /* Button text color */
-  padding: 8px 16px;
-  margin: 0 10px;
-  border: none;
-  border-radius: 4px;
+.owner-request-modal-btn:hover {
   cursor: pointer;
-}
-
-.logout-modal-buttons button:hover {
-  background: var(--color2);
-  color: var(--color4);
+  background-color: var(--color4);
 }
