--- a/frontend/src/Style/NotificationPageManagerStyle/NotiPageManagerStyle.css
+++ b/frontend/src/Style/NotificationPageManagerStyle/NotiPageManagerStyle.css
@@ -12,17 +12,19 @@
 .notifications-heading {
   font-size: 1.5rem;
   color: #333;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  margin-top: -100px;
 }
 
 .notifications-box {
   width: 300%; /* Adjust as necessary */
-  height: 60%;
+  height: 75%;
   max-width: 500px; /* Adjust as necessary */
   background: #ffffff;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 5px 5px 5px rgba(0.5, 0.5, 0.5, 0.5);
   border-radius: 10px;
   padding: 20px;
+  border: 1px solid #000;
 }
 
 .notification-item {
