--- a/frontend/src/Style/NotificationPageManagerStyle/NotiPageManagerStyle.css
+++ b/frontend/src/Style/NotificationPageManagerStyle/NotiPageManagerStyle.css
@@ -17,9 +17,10 @@
 }
 
 .notifications-box {
-  width: 300%; /* Adjust as necessary */
-  height: 75%;
-  max-width: 500px; /* Adjust as necessary */
+  width: 400%; /* Adjust as necessary */
+  height: 100%;
+  max-width: 650px; /* Adjust as necessary */
+  max-height: 350px;
   background: #ffffff;
   box-shadow: 3px 3px 3px rgba(0.5, 0.5, 0.5, 0.5);
   border-radius: 10px;
