Added style for approve and unapprove feature, fixed the request conatiner style and adjustment

--- a/frontend/src/Style/root.css
+++ b/frontend/src/Style/root.css
@@ -5,6 +5,8 @@
   --color2: #e0ccbe;
   --color3: #747264;
   --color4: #3c3633;
+  --color5: #000;
+  --color6: #00ff00;
   --cancel: #f90303;
 }
 
