--- a/frontend/src/Style/NotificationPageManagerStyle/NotiPageManagerStyle.css
+++ b/frontend/src/Style/NotificationPageManagerStyle/NotiPageManagerStyle.css
@@ -1,6 +1,6 @@
 .app {
   font-family: "Times New Roman", sans-serif;
-  background-color: #e5e5e5;
+  background-color: var(--color1);
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -11,27 +11,37 @@
 
 .notifications-heading {
   font-size: 1.5rem;
-  color: #333;
+  color: var(--color4);
   margin-bottom: 15px;
   margin-top: -100px;
 }
 
 .notifications-box {
-  width: 400%; /* Adjust as necessary */
-  height: 100%;
-  max-width: 650px; /* Adjust as necessary */
-  max-height: 350px;
-  background: #ffffff;
-  box-shadow: 3px 3px 3px rgba(0.5, 0.5, 0.5, 0.5);
-  border-radius: 10px;
+  margin: 5% 10%; /* Adjust as necessary */
   padding: 20px;
-  border: 1px solid #000;
+  background: var(--color1);
+  box-shadow: 3px 3px 3px var(--color5) (0.5, 0.5, 0.5, 0.5);
+  border-radius: 10px;
+  border: 1px solid var(--color5);
+  width: 430%; /* Adjust as necessary */
+  max-width: 800px; /* Adjust as necessary */
+  height: 300px; /* Adjust as necessary */
+  position: relative; /* Required for absolute positioning */
+}
+
+.notification-container {
+  position: absolute;
+  bottom: 50px; /* Adjust as necessary */
+  top: 0;
+  left: 20px;
+  right: 20px;
+  overflow-y: auto;
 }
 
 .notification-item {
   position: relative;
   padding: 10px 0;
-  color: #333;
+  color: var(--color4);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -44,17 +54,21 @@
   left: 0%; /* Adjust the space on the left */
   right: 0%; /* Adjust the space on the right */
   height: 1px;
-  background: #000;
+  background: var(--color5);
 }
 
 .close-btn {
   border: none;
   background-color: transparent;
-  color: #ff5b5b;
+  color: var(--cancel);
   cursor: pointer;
-  font-size: 1.5rem;
+  font-size: 2rem; /* Adjust the font size */
 }
 
 .close-btn:hover {
-  color: #ff0000;
+  color: var(--cancel);
+}
+
+.close-btn.checked {
+  color: var(--color6); /* Green color */
 }
