Created Condo Owner Dashboard

--- a/frontend/src/Style/CompanyDashboard/CompanyDashboardLandingPageStyle.css
+++ b/frontend/src/Style/CompanyDashboard/CompanyDashboardLandingPageStyle.css
@@ -23,7 +23,7 @@
 
 .dashboard-row {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom: 20px;
     width: 80%;
 }
