--- a/frontend/src/Style/LandingPageStyle/EmployeeRequestsLandingPageStyle.css
+++ b/frontend/src/Style/LandingPageStyle/EmployeeRequestsLandingPageStyle.css
@@ -1,7 +1,18 @@
 .employee-landing-page-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
   height: 100vh;
+  overflow: auto;
 }
 
+.condo-employee-heading {
+  position: sticky; /* Make the heading sticky */
+  top: 0; /* Stick it to the top of the container */
+  background-color: var(
+    --color1
+  ); /* Optional: Add background color for better visibility */
+  border-bottom: 1px solid var(--color4);
+  z-index: 999; /* Ensure it appears above other content */
+  padding: 10px 0; /* Add padding for spacing */
+  width: 100%; /* Make it take the full width of the container */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for better separation */
+}
