--- a/frontend/src/Style/NotificationPageManagerStyle/NotiPageManagerStyle.css
+++ b/frontend/src/Style/NotificationPageManagerStyle/NotiPageManagerStyle.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
 }
 .notifications-heading {
   font-size: 1.5rem;
@@ -22,6 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
 }
 
 .notification-container {
@@ -36,6 +38,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid var(--color4);
 }
 
 .notification-item::after {
